@@ -1,0 +1,39 @@
+{# Stalker a Production Asset Management System
+ Copyright (C) 2009-2013 Erkan Ozgur Yilmaz
+ 
+ This file is part of Stalker.
+ 
+ This library is free software; you can redistribute it and/or
+ modify it under the terms of the GNU Lesser General Public
+ License as published by the Free Software Foundation;
+ version 2.1 of the License.
+
+ This library is distributed in the hope that it will be useful,
+ but WITHOUT ANY WARRANTY; without even the implied warranty of
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ Lesser General Public License for more details.
+
+ You should have received a copy of the GNU Lesser General Public
+ License along with this library; if not, write to the Free Software
+ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
+#}
+<div class='dijitDialogPaneContentArea'>
+  <div style='width: 100%; height: 100%;'>
+    <div id='progress_bar'></div>
+  </div>
+{#  <div class='dijitDialogPaneActionBar' style='width: 100%; height: 100%;'>#}
+{#    <button id='task_ok_button'>Ok</button>#}
+{#    <button id='task_cancel_button'>Cancel</button>#}
+{#    &nbsp;#}
+{#  </div>#}
+</div>
+<script type='text/javascript'>
+  require(['dijit/ProgressBar', 'dojo/ready'],
+    function(ProgressBar, ready){
+      ready(function(){
+        var pBar = new ProgressBar({
+          indeterminate: true
+        }, 'progress_bar');
+      });
+    });
+</script>
